# unofficial-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  canceled.json  deny.toml  init.sh  moved.json  now.json  package.json  supplementary.json
api/: Cargo.toml
document/: unofficial-web-scraped-api-server.v1.yaml
public/: index.html
src/: error.rs  htmlgetter.rs  lib.rs  parse.rs  reschedule.rs  scrape.rs
src/class/: canceled.rs  mod.rs  moved.rs  supplementary.rs
src/classes/: canceled.rs  mod.rs  moved.rs  supplementary.rs  supplymentaly.rs
